perl (5.20.1~rc1-1) UNRELEASED; urgency=low

  * New upstream release candidate
  * Don't skip dist/threads/t/stack.t on GNU/Hurd as Hurd now has
    support for varying stack length sizes (Closes: #650175)
  * Disable failing test in t/io/socket.t on GNU/Hurd (see: #758718)

 -- Dominic Hargreaves <dom@earth.li>  Sat, 30 Aug 2014 17:28:47 -0700

perl (5.20.0-6) unstable; urgency=medium

  * Explicitly set mode of DEBIAN/conffiles to fix a Lintian error
    in certain build environments

 -- Dominic Hargreaves <dom@earth.li>  Fri, 29 Aug 2014 21:32:22 -0700

perl (5.20.0-5) unstable; urgency=medium

  [ Niko Tyni ]
  * Fix visible escape sequences in perldoc output by passing the "-R"
    option to the "less" pager. (Closes: #758689)
  * Pass explicit LD settings through to subdirectories again even if
    the build system sets LD. (Closes: #758471)
  * Drop the libcgi-fast-perl binary package, which is moving to
    a source package of its own. (Closes: #759187)

  [ Dominic Hargreaves ]
  * Note simplified developer tools requirements

 -- Dominic Hargreaves <dom@earth.li>  Thu, 28 Aug 2014 21:25:34 -0700

perl (5.20.0-4) unstable; urgency=medium

  * Drop the -exp1 suffix from perlapi-5.20.0: no further changes
    to @INC are planned in this cycle.
  * Build-depend on libc6-dev (>= 2.19-9) on s390x to make sure we
    build against the "new" reverted jmp_buf ABI. (Closes: #753444)
  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Thu, 14 Aug 2014 21:47:11 +0300

perl (5.20.0-3) experimental; urgency=medium

  * Disable the gcc -ftree-vrp optimization of regcomp.c on mips and
    mipsel to work around a possible gcc-4.9 bug.
    Thanks to Aurelien Jarno. (Closes: #754054)

 -- Niko Tyni <ntyni@debian.org>  Fri, 08 Aug 2014 10:16:53 +0300

perl (5.20.0-2) experimental; urgency=medium

  * Adjust the Breaks versions of libalien-wxwidgets-perl, libjcode-perl, and
    libanyevent-perl now that fixed versions are in the archive. (See #750017)